--- a/src/main/resources/templates/menuprincipal.html
+++ b/src/main/resources/templates/menuprincipal.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
 
+<body>
+<header>
+    <nav>
+        <ul>
+            <li><a href="#">ToDoList</a></li>
+            <li><a href="#">Tareas</a></li>
+            <li class="dropdown" id = "nav_init">
+                <button class="dropbtn">Usuario</button>
+                <div class="dropdown-content">
+                    <button onclick="document.getElementById('login').style.display='block'" >Cuenta</button>
+                    <button onclick="document.getElementById('signup').style.display='block'" >Cerrar sesión</button>
+                </div>
+            </li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
