Barra de navegación con pagina acerca de añadida

--- a/src/main/resources/templates/menuprincipal.html
+++ b/src/main/resources/templates/menuprincipal.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#">ToDoList</a></li>
+            <li><a href="https://trello.com/b/wvgzLzqH/todolist-mads">ToDoList</a></li>
             <li><a href="#">Tareas</a></li>
             <li class="dropdown" id = "nav_init">
                 <button class="dropbtn">Usuario</button>
