--- a/src/main/resources/templates/menuprincipal.html
+++ b/src/main/resources/templates/menuprincipal.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Menú principal</title>
+    <link rel="stylesheet" href="./src/main/resources/templates/menuprincipal.css">
 </head>
 
 <body>
