--- a/src/main/resources/templates/menuprincipal.html
+++ b/src/main/resources/templates/menuprincipal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Menú principal</title>
-    <link rel="stylesheet" href="./src/main/resources/templates/menuprincipal.css">
+    <link rel="stylesheet" href="./menuprincipal.css">
 </head>
 
 <body>
@@ -14,6 +14,7 @@
             <li><a href="#">Tareas</a></li>
             <li class="dropdown" id = "nav_init">
                 <button class="dropbtn">Usuario</button>
+
                 <div class="dropdown-content">
                     <button onclick="document.getElementById('login').style.display='block'" >Cuenta</button>
                     <button onclick="document.getElementById('signup').style.display='block'" >Cerrar sesión</button>
