--- a/src/main/resources/templates/menuprincipal.html
+++ b/src/main/resources/templates/menuprincipal.html
@@ -14,10 +14,9 @@
             <li><a href="#">Tareas</a></li>
             <li class="dropdown" id = "nav_init">
                 <button class="dropbtn">Usuario</button>
-
                 <div class="dropdown-content">
-                    <button onclick="document.getElementById('login').style.display='block'" >Cuenta</button>
-                    <button onclick="document.getElementById('signup').style.display='block'" >Cerrar sesión</button>
+                    <button onclick="display='block'" >Cuenta</button>
+                    <button onclick="display='block'" >Cerrar sesión</button>
                 </div>
             </li>
         </ul>
