--- a/src/main/resources/templates/menuprincipal.css
+++ b/src/main/resources/templates/menuprincipal.css
@@ -22,7 +22,7 @@ nav ul {
 
 nav ul li {
     float: left;
-    font-family: Arial, Helvetica, sans-serif;;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 
@@ -50,9 +50,7 @@ nav ul li a {
 .dropdown-content {
     display: none;
     position: absolute;
-    right: 0;
-    min-width: 100px;
-    z-index: 1;
+
 }
 
 .dropdown:hover .dropdown-content {
