--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
+
+
 <html xmlns:th="http://www.thymeleaf.org">
+
+
 
 <head th:replace="fragments :: head (titulo='Usuarios')"></head>
 
 <body>
 <header th:replace="fragments :: header (esAdmin=${usuario.getAdministrador()} ,username=${usuario.nombre}, userid=${usuario.id})"> </header>
 
-<div class="container-fluid">
-    <div class="p-4">
+<div class="container">
+    <div class="p">
         <h2>Usuarios</h2>
     </div>
     <div class="row mt-3 px-4">
         <div class="col">
-            <table class="table table-striped">
+            <table class="table">
                 <thead>
                 <tr>
                     <th>Id</th>
@@ -25,9 +29,6 @@
                 <tr th:each="usuario: ${usuarios}">
                     <td th:text="${usuario.id}"></td>
                     <td th:text="${usuario.email}"></td>
-                    <td>
-                        <a class="btn btn-primary btn-xs" th:href="@{/usuarios/{id}/(id=${usuario.id})}"/><i class="fas fa-info-circle"></i></a>
-                    </td>
                     <td>
                         <form th:action="@{/bloquear/{id}(id=${usuario.id})}" method="post">
                             <button th:if="${usuario.bloqueado == false}" class="btn btn-danger btn-xs" ><i class="fas fa-lock"></i></button>
