--- a/src/main/resources/templates/principalDescripcion.html
+++ b/src/main/resources/templates/principalDescripcion.html
@@ -4,25 +4,30 @@
 <head th:replace="fragments :: head (titulo=${usuario.getNombre()})"></head>
 
 <body>
+
 <header th:replace="fragments:: header (esAdmin=${usuarioSesion.getAdministrador()} ,username=${usuarioSesion.nombre}, userid=${usuarioSesion.id})"> </header>
 <div class="container-fluid">
-  <div class="pt-4">
-    <div class="p-5 card">
       <h1 class="card-header text-center" th:text="${usuario.getNombre()}"></h1>
-      <div class="card-group text-muted p-4">
+
         <div class="card">
+
           <div class="list-group-item">
-            <p>Id</p>
+            <p> Id </p>
           </div>
+
           <div class="list-group-item">
-            <p>Nombre</p>
+            <p> Nombre </p>
           </div>
+
           <div class="list-group-item">
-            <p>Email</p>
+            <p> Email </p>
           </div>
+
           <div class="list-group-item">
-            <p>Fecha de nacimiento</p>
+            <p> Fecha de nacimiento </p>
           </div>
+
+
         </div>
         <div class="card">
           <div class="list-group-item">
@@ -39,7 +44,8 @@
           </div>
         </div>
       </div>
-      <button class="btn text-primary text-center d-block w-100" onclick="volver()"/>Volver</a>
+
+      <button onclick="volver()"/> Volver </a>
     </div>
   </div>
 
