--- a/src/main/resources/templates/loginTarea.html
+++ b/src/main/resources/templates/loginTarea.html
@@ -5,30 +5,27 @@
 
 <body>
 <div class="container-fluid">
-    <div class="d-flex justify-content-center py-4">
-        <div class="align-content-center py-4 shadow col-lg-3 col-md-4 col-sm-5 col-xl-3 col-10">
-            <div class="text-center py-4">
                 <h2>To Do List</h2>
             </div>
+
             <div class="mx-3">
+
                 <form method="post" th:action="@{/login}" th:object="${loginData}">
-                    <div class="form-group">
-                        <label for="eMail">Usuario</label>
-                        <input id="eMail" class="form-control" name="eMail" placeholder="Correo electrónico" type="text" th:field="*{eMail}" required/>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Contraseña</label>
-                        <input id="password" class="form-control" name="password"  placeholder="Contraseña" type="password" th:field="*{password}" required/>
-                    </div>
-                    <div class="pt-3">
-                        <button type="submit" class="btn btn-primary d-block w-100">Login</button>
-                        <a class="btn btn-link d-block" href="/registro">Ir a registro</a>
-                        <a class="btn btn-link d-block" href="/about">Acerca de</a>
-                    </div>
+                        <label for="eMail"> Usuario </label>
+                        <input id="eMail" name="eMail" placeholder="Correo electrónico" type="text" th:field="*{eMail}" required/>
+
+
+
+                        <label for="password"> Contraseña </label>
+                        <input id="password" name="password"  placeholder="Contraseña" type="password" th:field="*{password}" required/>
+
+
+                        <button type="submit">Login</button>
+                        <a class="btn btn-link d-block" href="/registro"> Ir a registro </a>
+                        <a class="btn btn-link d-block" href="/about"> Acerca de </a>
+
                 </form>
             </div>
-        </div>
-    </div>
     <div class="justify-content-center d-flex">
         <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
     </div>
