--- a/src/main/resources/templates/formNuevaTarea.html
+++ b/src/main/resources/templates/formNuevaTarea.html
@@ -4,18 +4,19 @@
 <head th:replace="fragments :: head (titulo='Login')"></head>
 
 <body>
-<div class="container-fluid">
+<div class="container">
 
-    <h2 th:text="'Nueva tarea para el usuario ' + ${usuario.getNombre()}"></h2>
+    <h2 th:text="'Realizar para el usuario' + ${usuario.getNombre()}"></h2>
 
     <form method="post" th:action="@{/usuarios/{id}/tareas/nueva(id=${usuario.id})}" th:object="${tareaData}">
-        <div class="col-6">
+        <div class="col">
         <div class="form-group">
-            <label for="titulo">Título de la tarea:</label>
-            <input class="form-control" id="titulo" name="titulo" required th:field="*{titulo}" type="text"/>
+            <label for="titulo">Título para tarea:</label>
+            <input  id="titulo" name="titulo" required th:field="*{titulo}" type="text"/>
         </div>
-        <button class="btn btn-primary" type="submit">Crear tarea</button>
-        <a class="btn btn-link" th:href="@{/usuarios/{id}/tareas(id=${usuario.id})}">Cancelar</a>
+
+        <button type="submit">Crear tarea</button>
+        <a th:href="@{/usuarios/{id}/tareas(id=${usuario.id})}">Cancelar</a>
         </div>
     </form>
 </div>
