--- a/src/main/resources/templates/formRegistro.html
+++ b/src/main/resources/templates/formRegistro.html
@@ -6,17 +6,17 @@
 <body>
 <div class="container-fluid">
 
-    <div class="row justify-content-center mb-3">
-        <div class="col-auto">
-            <h2>Registro nuevo usuario</h2>
+    <div class="row">
+        <div class="col">
+            <h2>Registro para un nuevo usuario</h2>
         </div>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-6">
+    <div class="row ">
+        <div class="col">
             <form method="post" th:action="@{/registro}" th:object="${registroData}">
-                <div class="row justify-content-center">
-                    <div class="col-6">
+                <div class="row">
+                    <div class="col">
                         <div class="form-group">
                             <label for="eMail">Correo electrónico</label>
                             <input id="eMail" class="form-control" name="eMail" placeholder="Correo electrónico"
@@ -46,8 +46,9 @@
             </form>
         </div>
     </div>
-    <div class="row mt-3 justify-content-center">
-        <div class="col-9">
+    <div class="row">
+        <div class="col">
+
             <div th:object="${registroData}">
                 <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                     <li th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
@@ -56,6 +57,7 @@
             <ul th:if="${error != null}" class="alert alert-danger">
                 <li th:text="${error}"></li>
             </ul>
+
         </div>
     </div>
 </div>
