--- a/src/main/resources/templates/listaTareas.html
+++ b/src/main/resources/templates/listaTareas.html
@@ -6,13 +6,13 @@
 <body>
 <div class="container-fluid">
 
-    <div class="row mt-3">
+    <div class="row">
         <div class="col">
             <h2 th:text="'Listado de tareas de ' + ${usuario.nombre}"></h2>
         </div>
     </div>
 
-    <div class="row mt-3">
+    <div class="row">
         <div class="col">
             <table class="table table-striped">
                 <thead>
@@ -26,14 +26,14 @@
                 <tr th:each="tarea: ${tareas}">
                     <td th:text="${tarea.id}"></td>
                     <td th:text="${tarea.titulo}"></td>
-                    <td><a class="btn btn-primary btn-xs" th:href="@{/tareas/{id}/editar(id=${tarea.id})}"/>editar</a>
-                        <button class="btn btn-danger btn-xs" onmouseover="" style="cursor: pointer;"
-                           th:onclick="'del(\'/tareas/' + ${tarea.id} + '\')'">borrar</button>
+                    <td>
+                        <a th:href="@{/tareas/{id}/editar(id=${tarea.id})}"> Editar </a>
+                        <button th:onclick="'del(\'/tareas/' + ${tarea.id} + '\')'"> Borrar </button>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <p><a class="btn btn-primary" th:href="@{/usuarios/{id}/tareas/nueva(id=${usuario.id})}"> Nueva tarea</a>
+            <p><a th:href="@{/usuarios/{id}/tareas/nueva(id=${usuario.id})}"> Nueva tarea </a>
             <a class="btn btn-link" href="/logout">Salir</a></p>
         </div>
     </div>
@@ -42,7 +42,6 @@
             <div class="alert alert-success alert-dismissible fade show" role="alert" th:if="${!#strings.isEmpty(mensaje)}">
                 <span th:text="${mensaje}"></span>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
                 </button>
             </div>
         </div>
@@ -54,11 +53,10 @@
 
 <div th:replace="fragments::javascript"/>
 
-<!-- Lanzamos una petición DELETE por JavaScript para borrar una tarea -->
 
 <script type="text/javascript">
     function del(urlBorrar) {
-        if (confirm('¿Estás seguro/a de que quieres borrar la tarea?')) {
+        if (confirm('¿Deseas borrar la tarea?')) {
             fetch(urlBorrar, {
                 method: 'DELETE'
             }).then((res) => location.reload());
