--- a/src/main/resources/templates/formEditarTarea.html
+++ b/src/main/resources/templates/formEditarTarea.html
@@ -9,11 +9,9 @@
     <h2 th:text="'Modificación de la tarea ' + ${tarea.getId()}"></h2>
 
     <form method="post" th:action="@{/tareas/{id}/editar(id=${tarea.id})}" th:object="${tareaData}">
-        <div class="col-6">
-        <div class="form-group">
+        <div class="col">
             <label for="titulo">Título de la tarea:</label>
             <input class="form" id="titulo" name="titulo" required th:field="*{titulo}" type="text"/>
-        </div>
         <button type="submit">Modificar tarea</button>
         <a th:href="@{/usuarios/{id}/tareas(id=${tarea.usuario.id})}">Cancelar</a>
         </div>
