--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -4,36 +4,37 @@
 <head th:replace="fragments :: head (titulo='Login')"></head>
 
 <body>
-<div class="container-fluid">
+<div class="container">
 
-    <div class="row justify-content-center mb-3">
-        <div class="col-auto">
+    <div class="row">
+        <div class="col">
             <h2>Login</h2>
         </div>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-6">
+    <div class="row ">
+        <div class="col">
             <form method="post" th:action="@{/login}" th:object="${loginData}">
-                <div class="row justify-content-center">
-                    <div class="col-6">
+                <div class="row">
+                    <div class="col">
                         <div class="form-group">
-                            <label for="eMail">Usuario</label>
-                            <input id="eMail" class="form-control" name="eMail" placeholder="Correo electrónico" type="text" th:field="*{eMail}" required/>
+                            <label for="emailuser"> Correo electrónico </label>
+                            <input id="emailuser" name="emailuser" placeholder="Correo electrónico" type="text" th:field="*{emailuser}" required/>
                         </div>
                         <div class="form-group">
-                            <label for="password">Contraseña</label>
-                            <input id="password" class="form-control" name="password"  placeholder="Contraseña" type="password" th:field="*{password}" required/>
+                            <label for="contraseña">Contraseña</label>
+                            <input id="contraseña" name="contraseña"  placeholder="Contraseña" type="password" th:field="*{contraseña}" required/>
                         </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
-                        <a class="btn btn-link" href="/registro">Ir a registro</a>
-                        <a class="btn btn-link" href="/about">Acerca de</a>
+                        <button type="submit">Login</button>
+
+                        <a href="/registro"> Ir a registro </a>
+                        <a href="/about"> Acerca de </a>
             </form>
         </div>
     </div>
-    <div class="row mt-3 justify-content-center">
-        <div class="col-6">
-            <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+    <div class="row">
+        <div class="col">
+            <div th:if="${error != null}" th:text="${error}"></div>
         </div>
     </div>
 </div>
