--- a/src/main/resources/templates/modificado.html
+++ b/src/main/resources/templates/modificado.html
@@ -18,37 +18,36 @@
     </div>
   </div>
 
-  <div class="row j">
+  <div class="row">
       <form method="post" th:action="@{/modificarPerfil}" th:object="${modificaData}">
         <div class="row ">
 
           <div class="col">
             <div class="form-group">
               <label for="nombre"> Nombre </label>
-              <input id="nombre" class="form-control" name="nombre" type="text"
-                     th:field="*{nombre}" required/>
+              <input id="nombre" name="nombre" type="text" th:field="*{nombre}" required/>
             </div>
 
             <div class="form-group">
               <label for = "password"> Contraseña Actual </label>
-              <input id = "actualpassword" name="password" placeholder="Contraseña Actual"
-                     type="password" th:field="*{actualpassword}" required/>
+              <input id = "contraseñactual" name="password" placeholder="Contraseña Actual"
+                     type="password" th:field="*{contraseñactual}" required/>
             </div>
             <div class="form-group">
               <label for="password"> Nueva Contraseña </label>
-              <input id="password" name="password" placeholder="Nueva contraseña"
+              <input id="password" name="passwordnueva" placeholder="Nueva contraseña"
                      type="password" th:field="*{password}" required/>
             </div>
 
             <div class="form-group">
               <label for="password"> Repetir la nueva Contraseña </label>
-              <input id="password2" name="password" placeholder="Repetir contraseña"
+              <input id="password2" name="passwordnueva2" placeholder="Repetir contraseña"
                      type="password" th:field="*{password2}" required/>
             </div>
 
             <div class="form-group">
-              <label for="fechaNacimiento"> Fecha de nacimiento </label>
-              <input id="fechaNacimiento" type="date" th:field="*{fechaNacimiento}"/>
+              <label for="fechadeNacimiento"> Fecha de nacimiento </label>
+              <input id="fechadeNacimiento" type="date" th:field="*{fechadeNacimiento}"/>
             </div>
 
             <button type="submit" > Modificar </button>
